<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cb_night"
    android:paddingLeft="@dimen/cb_gutter_side"
    android:paddingRight="@dimen/cb_gutter_side"
    android:paddingTop="@dimen/cb_gutter_top"
    android:paddingBottom="@dimen/cb_gutter_bottom">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_title"
        android:textColor="@color/cb_slate"
        android:textSize="@dimen/cb_text_kicker"
        android:fontFamily="monospace"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_heading"
        android:textColor="@color/cb_ink"
        android:textSize="@dimen/cb_text_title"
        android:textStyle="bold"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/text_setup_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cb_slate"
        android:textSize="@dimen/cb_text_data"
        android:layout_marginTop="2dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/cb_space_md"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/setup_rows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/cb_space_sm">

        <Button
            android:id="@+id/btn_setup_check"
            style="@style/CoreEQ.ActionRow"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/setup_check_again" />

        <Button
            android:id="@+id/btn_setup_copy_report"
            style="@style/CoreEQ.ActionRow"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/setup_copy_report" />

        <Button
            android:id="@+id/btn_setup_done"
            style="@style/CoreEQ.ActionRow"
            android:layout_width="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/manual_eq_done" />
    </LinearLayout>
</LinearLayout>
